# autoplay

./: CMakeLists.txt  README.md
debian/: changelog  control  rules
source/: gui.cpp  main.cpp
systemd/: autoplay.service
